--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8883
 # ===============================
 # Set here configurations for the database connection
 # Connection url for the database "netgloo_blog"
-spring.datasource.url=jdbc:mysql://localhost:3306/employee?useSSL=false
+spring.datasource.url=jdbc:mysql://apiemployee.c5thbtdxkhft.us-east-1.rds.amazonaws.com:3306/apiemployee?useSSL=false
 # Username and password
 spring.datasource.username=root
 spring.datasource.password=root
