--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=8883
 # Connection url for the database "netgloo_blog"
 spring.datasource.url=jdbc:mysql://apiemployee.c5thbtdxkhft.us-east-1.rds.amazonaws.com:3306/apiemployee?useSSL=false
 # Username and password
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=priya123
+spring.datasource.password=123priya
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
